# hook-mining-engine

./: .env.example  .gitignore  README.md  render.yaml  requirements.txt
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/prompts/: brand.py  extraction.py  generation.py
backend/app/routers/: brand.py  generation.py  hooks.py  mining.py  settings.py
backend/app/services/: apify_service.py  hook_service.py  llm_service.py  media_service.py  scheduler.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: BrandConfig.tsx  CronStatus.tsx  DraftModal.tsx  HookCard.tsx  HookDetailModal.tsx  HookGrid.tsx  MineButton.tsx  MiningResults.tsx  MiningSettings.tsx  PatternBadge.tsx  ScriptCard.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts
supabase/migrations/: 001_create_hooks_table.sql  002_add_media_and_trends.sql  003_create_generated_scripts.sql  004_add_languages_config.sql  005_create_brand_config.sql  006_seed_mining_keywords.sql  007_remove_hooks_without_images.sql
